--- a/Project 0.html
+++ b/Project 0.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 	<html lang="en">
 		<head>
-			<title>My First HTML5 Web Page</title>
+			<title>
+				My First HTML5 Web Page
+			</title>
 			<meta charset="utf-8">
 		</head>
 		<body>
